--- a/pom.xml
+++ b/pom.xml
@@ -10,14 +10,14 @@
   <parent>
     <groupId>io.micronaut</groupId>
     <artifactId>micronaut-parent</artifactId>
-    <version>2.5.13</version>
+    <version>3.5.2</version>
   </parent>
 
   <properties>
     <packaging>jar</packaging>
     <jdk.version>11</jdk.version>
     <release.version>11</release.version>
-    <micronaut.version>2.5.13</micronaut.version>
+    <micronaut.version>3.5.2</micronaut.version>
     <exec.mainClass>com.igaurav.Application</exec.mainClass>
     <micronaut.runtime>netty</micronaut.runtime>
   </properties>
@@ -39,6 +39,20 @@
       <groupId>io.micronaut</groupId>
       <artifactId>micronaut-validation</artifactId>
       <scope>compile</scope>
+    </dependency>
+    <dependency>
+      <groupId>io.micronaut.rxjava2</groupId>
+      <artifactId>micronaut-rxjava2-http-client</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>javax.inject</groupId>
+      <artifactId>javax.inject</artifactId>
+      <version>1</version>
+    </dependency>
+
+    <dependency>
+      <groupId>io.micronaut.rxjava2</groupId>
+      <artifactId>micronaut-rxjava2</artifactId>
     </dependency>
     <dependency>
       <groupId>org.junit.jupiter</groupId>
